# fullmonte-source-code

./: FMSW-Build.pl  README.md  README.txt  Run_ctest.sh  build_fullmonte.sh  fm_build.config  test-buildbot.txt
FullMonteSW/: .gitattributes  .gitignore  CMakeLists.txt  Config.h.in  FMSW-Build.pl  FullMonte.tcl.in  FullMonteSWConfig.cmake.in  README.md  Salvaged.cpp  build_fullmonte.sh  fm_build.config  install_antlr_and_boost.pl  pkgIndex.tcl.in  take_drop.hpp  tclmonte.sh.in  yasi.txt
FullMonteSW/Examples/: CMakeLists.txt  HeadAndNeckModel.tcl.in  colin27_comsol.tcl.in  colin27_energy.tcl.in  colin27_energy_ball.tcl.in  colin27_energy_composite.tcl.in  colin27_fluence.tcl.in  colin27_fluence_ball.tcl.in  colin27_line_source.tcl.in  mouse_energy.tcl.in  mouse_fluence.tcl.in  mouse_paths.tcl  newbli.tcl  runOneFullMonte.tcl  runOneLayered.tcl  runOneMCML.sh  runOneTimos.sh  tclShell.tcl  test_tclShell.cpp
FullMonteSW/Examples/FullMonte_MMC_Comparison/: CMakeLists.txt  FullMonte_MMC_Comparison.cpp  README.md  Test_FullMonte_MMC_Comparison.cpp
FullMonteSW/Examples/FullMonte_approx/: CMakeLists.txt  FullMonte_approx.cpp  FullMonte_approx.in  README.md  Test_FullMonte_approx.cpp  find_pos.cpp  find_pos.in  spherePos.cpp  spherePos.hpp
FullMonteSW/Examples/FullMonte_composite/: CMakeLists.txt  FullMonte_composite.cpp  FullMonte_composite.in  README.md  Test_FullMonte_composite.cpp
FullMonteSW/Examples/FullMonte_line_source/: CMakeLists.txt  FullMonte_line_source.cpp  FullMonte_line_source.in  README.md  Test_FullMonte_line_source.cpp
FullMonteSW/Examples/FullMonte_self/: CMakeLists.txt  FullMonte_self.cpp  FullMonte_self.in  README.md  Test_FullMonte_self.cpp
FullMonteSW/Examples/FullMonte_visualize/: CMakeLists.txt  FullMonte_visualize.cpp  FullMonte_visualize.in
FullMonteSW/Examples/Helpers/: README.md  chi2test.cpp  chi2test.hpp  comparePlot  comparePlot.m  fileReader.cpp  fileReader.hpp  fileWriter.cpp  fileWriter.hpp  run_comparePlot.sh  visualize.cpp  visualize.hpp
FullMonteSW/Geometry/: Basis.cpp  Builder.hpp  CMakeLists.txt  Cells.hpp  ErrorChecker.cpp  ErrorChecker.hpp  Face.cpp  FaceLinks.hpp  FullMonteGeometry.i  Geometry.cpp  Geometry.hpp  Layer.cpp  Layer.hpp  Layered.cpp  Layered.hpp  Material.cpp  Material.hpp  MaterialSet.cpp  MaterialSet.hpp  PFTetraMeshBuilder.cpp  PFTetraMeshBuilder.hpp  PTTetraMeshBuilder.cpp  PTTetraMeshBuilder.hpp  Partition.cpp  Partition.hpp  Point.hpp  Points.cpp  Points.hpp  Ray.hpp  RayWalk.cpp  RayWalk.hpp  StandardArrayKernel.hpp  Test_Layered.cpp  Test_Placement.cpp  TetraMesh.cpp  TetraMesh.hpp  TetraMeshBuilder.cpp  TetraMeshBuilder.hpp  TetraOrientationChecker.cpp  UnitVector.hpp  (+2 more)
FullMonteSW/Geometry/Filters/: PlaneCrossingFilter.cpp  PlaneCrossingFilter.hpp  TetraFilterByRegion.hpp  TriFilterRegionBounds.hpp
FullMonteSW/Geometry/Modifiers/: Test_AffineTransform.cpp
FullMonteSW/Geometry/Queries/: CMakeLists.txt  PartitionFacesOnRegionBounds.cpp  PartitionFacesOnRegionBounds.hpp  PartitionRelabel.cpp  PartitionRelabel.hpp  RayThroughMesh.hpp  SerialPointTetraLocator.hpp  TestQueries.cpp  TetraEnclosingPointByLinearSearch.cpp  TetraEnclosingPointByLinearSearch.hpp  TetrasNearPoint.cpp  TetrasNearPoint.hpp  TetrasNearPoint.pvsm
FullMonteSW/Geometry/Sources/: Composite.hpp  Line.hpp
FullMonteSW/Geometry/UnitTest/: CMakeLists.txt  Test_Layered.cpp  Test_Placement.cpp  Test_Queries.cpp
FullMonteSW/Geometry/Units/: CMakeLists.txt  Quantity.cpp  Quantity.hpp
FullMonteSW/Kernels/: CMakeLists.txt  FullMonteKernels.i  Kernel.cpp  Kernel.hpp  MCKernelBase.hpp
FullMonteSW/Kernels/Software/: CMakeLists.txt  FullMonteSWKernel.i  HenyeyGreenstein.hpp  MCMLKernel.hpp  Material.cpp  Material.hpp  Test_MCMLKernel.cpp  Test_Mouse.cpp  Tetra.cpp  Tetra.hpp  TetraMCKernel.hpp  TetraMCKernelThread.hpp  TetraSVKernel.hpp  TetraSurfaceKernel.hpp  TetraTraceKernel.hpp  TetraVolumeKernel.hpp  TetrasFromLayered.cpp  TetrasFromLayered.hpp  TetrasFromTetraMesh.cpp  TetrasFromTetraMesh.hpp  ThreadedMCKernelBase.cpp  ThreadedMCKernelBase.hpp  avx_mathfun.h  sse.hpp
FullMonteSW/OutputTypes/: AbstractSpatialMap.cpp  AbstractSpatialMap.hpp  CMakeLists.txt  FullMonteData.i  MCConservationCounts.cpp  MCConservationCounts.hpp  MCEventCounts.cpp  MCEventCounts.hpp  OutputData.cpp  OutputData.hpp  OutputDataCollection.cpp  OutputDataCollection.hpp  OutputDataSummarize.cpp  OutputDataSummarize.hpp  OutputDataType.hpp  PacketPositionTrace.hpp  PacketPositionTraceSet.cpp  PacketPositionTraceSet.hpp  SpatialMap.hpp  SpatialMap2D.hpp  Test_Containers.cpp
FullMonteSW/Queries/: AbsorptionSum.cpp  AbsorptionSum.hpp  CMakeLists.txt  DirectedSurfaceOfRegion.cpp  DirectedSurfaceOfRegion.hpp  DoseHistogram.cpp  DoseHistogram.hpp  DoseHistogramCollection.cpp  DoseHistogramCollection.hpp  DoseHistogramGenerator.cpp  DoseHistogramGenerator.hpp  DoseSurfaceHistogramGenerator.cpp  DoseSurfaceHistogramGenerator.hpp  DoseVolumeHistogramGenerator.cpp  DoseVolumeHistogramGenerator.hpp  EnergyToFluence.cpp  EnergyToFluence.hpp  FullMonteQueries.i  Test_Histograms.cpp
FullMonteSW/Queries/UnitTest/: CMakeLists.txt  Test_Histograms.cpp
FullMonteSW/Storage/: CMakeLists.txt
FullMonteSW/Storage/COMSOL/: CMakeLists.txt  COMSOLMeshReader.cpp  (+5 more)
FullMonteSW/VTK/: CMakeLists.txt  SwigWrapping.cpp  SwigWrapping.hpp  TestVTK.cpp  vtkDoseHistogramWrapper.cpp  vtkDoseHistogramWrapper.h  vtkFullMonteArrayAdaptor.cpp  vtkFullMonteMeshFacesToPolyData.cpp  vtkFullMonteMeshFacesToPolyData.h  vtkFullMonteMeshFromUnstructuredGrid.cpp  vtkFullMonteMeshFromUnstructuredGrid.h  vtkFullMontePacketPositionTraceSetToPolyData.cpp  vtkFullMontePacketPositionTraceSetToPolyData.h  vtkFullMonteTetraMeshWrapper.cpp  vtkFullMonteTetraMeshWrapper.h  vtkHelperFunctions.hpp  vtkSourceExporter.cpp
FullMonteSW/antlr/: antlr_jar_wget_stderr.txt  libantlr_tar_stdout.txt  libantlr_wget_stderr.txt
FullMonteSW/boost/: boost_wget_stderr.txt
FullMonteSW/cmake/: BoostUnitTest.cmake  UseFullMonteSW.cmake
FullMonteSW/docs/: FullMonteSW_Installation_And_Tutorial.docx  Installation_Guide.odt
(+146 files in other folders)
