INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})


ADD_LIBRARY(FullMonteCOMSOL SHARED COMSOLMeshWriter.cpp COMSOLMeshReader.cpp)

TARGET_LINK_LIBRARIES(FullMonteCOMSOL FullMonteGeometry FullMonteTextFile)


ADD_EXECUTABLE(Test_COMSOLMeshReaderWriter Test_COMSOLMeshReaderWriter.cpp COMSOLMeshReader.cpp COMSOLMeshReader.hpp COMSOLMeshWriter.hpp COMSOLMeshWriter.cpp)

TARGET_LINK_LIBRARIES(Test_COMSOLMeshReaderWriter vtkFullMonte FullMonteTextFile FullMonteGeometry FullMonteTIMOS ${Boost_UNIT_TEST_FRAMEWORK_LIBRARIES} ${VTK_LIBRARIES})
SET_SOURCE_FILES_PROPERTIES(Test_COMSOLMeshReaderWriter.cpp PROPERTIES
        COMPILE_DEFINITIONS "BOOST_TEST_DYN_LINK;BOOST_TEST_MODULE=Test_COMSOLMeshReaderWriter")
ADD_TEST(NAME Test_COMSOLMeshReaderWriter
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/bin
        COMMAND ${CMAKE_BINARY_DIR}/bin/Test_COMSOLMeshReaderWriter)


IF(WRAP_TCL)
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
	SET_SOURCE_FILES_PROPERTIES(FullMonteCOMSOL.i PROPERTIES CPLUSPLUS ON)
	SET_SOURCE_FILES_PROPERTIES(FullMonteCOMSOL.i PROPERTIES OBJECT_DEPENDS "COMSOLMeshReader.hpp;COMSOLMeshWriter.hpp")
	SWIG_ADD_MODULE(FullMonteCOMSOLTCL tcl FullMonteCOMSOL.i)
	SWIG_LINK_LIBRARIES(FullMonteCOMSOLTCL FullMonteCOMSOL ${TCL_LIBRARY} FullMonteGeometry)
	
	INSTALL(TARGETS FullMonteCOMSOLTCL
		LIBRARY
		DESTINATION lib)
ENDIF()

install(TARGETS FullMonteCOMSOL
	LIBRARY
	DESTINATION lib)
