INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(FullMonteTIMOS SHARED TIMOSMeshWriter.cpp TIMOSMeshReader.cpp TIMOSMaterialReader.cpp TIMOSSourceReader.cpp TextFileReader.cpp TIMOSOutputReader.cpp)

TARGET_LINK_LIBRARIES(FullMonteTIMOS FullMonteGeometry FullMonteTextFile)


ADD_SUBDIRECTORY(UnitTest)
#ADD_BOOST_UNIT_TEST(TIMOSReaderWriter Test.cpp)
#TARGET_LINK_LIBRARIES(TIMOSReaderWriter FullMonteGeometry FullMonteTIMOS)
#ADD_TEST(TIMOSReaderWriter
#	COMMAND ${CMAKE_BINARY_DIR}/bin/TIMOSReaderWriter
#	COMMAND diff ${CMAKE_CURRENT_BINARY_DIR}/TIMOSMeshWriter.mesh ${CMAKE_CURRENT_SOURCE_DIR}/TIMOSMeshWriter.expected.mesh)
	

IF(WRAP_TCL)
    INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

    SET_SOURCE_FILES_PROPERTIES(FullMonteTIMOS.i PROPERTIES CPLUSPLUS ON)
	SET_SOURCE_FILES_PROPERTIES(FullMonteTIMOS.i PROPERTIES OBJECT_DEPENDS "TIMOS.hpp;TIMOSWriter.hpp;TIMOSReader.hpp")
    SWIG_ADD_MODULE(FullMonteTIMOSTCL tcl FullMonteTIMOS.i)
    SWIG_LINK_LIBRARIES(FullMonteTIMOSTCL FullMonteTIMOS ${TCL_LIBRARY} FullMonteGeometry)

	INSTALL(TARGETS FullMonteTIMOSTCL
		LIBRARY
		DESTINATION lib)
ENDIF()

install(TARGETS FullMonteTIMOS
	LIBRARY
	DESTINATION lib)
